--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1 class="font-bold text-5xl leading-[1.2] max-sm:text-3xl">Zidane Store Layanan Akun Canva Premium</h1>
           <p class="text-xl max-sm:text-lg">Langsung cek layanan di website kami sekarang juga!</p>
           <div class="flex justify-center items-center bg-blue-500 w-50 py-5 text-white rounded-4xl font-bold hover:bg-blue-600">
-            <a href="">Lihat Layanan</a>
+            <a href="#layanan">Lihat Layanan</a>
           </div>
         </div>
         <div class="img flex justify-center items-center size-100 w-230">
@@ -106,28 +106,14 @@
           <div class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow">
             <img src="img/canva.png" alt="" class="w-full h-40 object-cover rounded-2xl" />
             <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
-              <h1 class="text-3xl font-bold py-2">Pro Lifetime</h1>
-              <p class="text-[0.9rem] min-h-20">
-                Akses Canva Pro seumur hidup, cukup bayar sekali tanpa perpanjangan. Cocok untuk kamu yang butuh fitur premium jangka panjang.
-              </p>
-              <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
-                <a
-                  href="https://api.whatsapp.com/send/?phone=6286996589123&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
-                  >Pesan</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow">
-            <img src="img/canva.png" alt="" class="w-full h-40 object-cover rounded-2xl" />
-            <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
               <h1 class="text-3xl font-bold py-2">Pro 1 Tahun</h1>
               <p class="text-[0.9rem] min-h-20">
                 Langganan Canva Pro selama 12 bulan penuh. Praktis, hemat, dan langsung aktif dalam hitungan menit.
               </p>
               <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
                 <a
-                  href="https://api.whatsapp.com/send/?phone=6286996589123&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  target="_blank"
                   >Pesan</a
                 >
               </div>
@@ -142,7 +128,8 @@
               </p>
               <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
                 <a
-                  href="https://api.whatsapp.com/send/?phone=6286996589123&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  target="_blank"
                   >Pesan</a
                 >
               </div>
@@ -155,7 +142,8 @@
               <p class="text-[0.9rem] min-h-20">Coba semua fitur Canva Pro selama 30 hari. Ideal untuk kebutuhan desain cepat atau proyek singkat.</p>
               <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
                 <a
-                  href="https://api.whatsapp.com/send/?phone=6286996589123&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  target="_blank"
                   >Pesan</a
                 >
               </div>
@@ -239,7 +227,8 @@
               </p>
               <div class="bg-green-500 w-40 p-3 text-center text-white rounded-2xl hover:bg-green-600">
                 <a
-                  href="https://api.whatsapp.com/send/?phone=6286996589123&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+ingin+melaporkan+kendala+terkait+layanan+Canva+Pro.&type=phone_number&app_absent=0"
+                  target="_blank"
                   >Laporkan Kendala</a
                 >
               </div>
@@ -269,11 +258,11 @@
           <div class="font-medium text-[1rem]">
             <p>
               <i class="fa-brands fa-instagram"></i
-              ><a href="https://www.instagram.com/canvapremium__zidane/" class="hover:text-gray-800"> Instagram</a>
+              ><a href="https://www.instagram.com/canvapremium__zidane/" class="hover:text-gray-800" target="_blank"> Instagram</a>
             </p>
             <p>
               <i class="fa-brands fa-tiktok"></i
-              ><a href="https://www.tiktok.com/@canvapremium__zidane?_t=ZS-8wBcpNv0Ggr&_r=1" class="hover:text-gray-800"> Tiktok</a>
+              ><a href="https://www.tiktok.com/@canvapremium__zidane?_t=ZS-8wBcpNv0Ggr&_r=1" class="hover:text-gray-800" target="_blank"> Tiktok</a>
             </p>
           </div>
         </div>
@@ -286,8 +275,9 @@
             <p>
               <i class="fa-solid fa-phone"></i>
               <a
-                href="https://api.whatsapp.com/send/?phone=6286996589123&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
+                href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
                 class="hover:text-gray-800"
+                target="_blank"
               >
                 +62 878-7217-6733</a
               >
