--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="text-center font-bold text-4xl text-gray-700 pb-10 max-sm:text-2xl">
           <h1>Pilih Paket Canva Sesuai Kebutuhanmu</h1>
         </div>
-        <div class="flex gap-8 max-xl:flex-wrap max-xl:justify-center max-xl:items-center">
+        <div class="flex justify-center items-center gap-8 max-xl:flex-wrap max-xl:justify-center max-xl:items-center">
           <div class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow">
             <img src="img/canva.png" alt="" class="w-full h-40 object-cover rounded-2xl" />
             <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
