--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="bg-white shadow-xl text-['Poppins'] sticky top-0 z-50">
-      <div class="mx-15 flex justify-between items-center text-black max-sm:mx-0 max-sm:me-5">
+      <div class="max-w-7xl mx-auto flex justify-between items-center text-black max-sm:mx-0 max-sm:me-5">
         <div class="flex">
           <div class="img flex justify-center items-center size-25">
             <img src="img/LOGO REMOVE.png" alt="" />
@@ -50,7 +50,7 @@
     </div>
 
     <section class="bg-gradient-to-b from-blue-200 to-blue-500 py-20 max-sm:py-10">
-      <div class="mx-15 flex justify-between max-sm:flex-wrap-reverse max-sm:mx-5">
+      <div class="max-w-7xl mx-auto flex justify-between max-sm:flex-wrap-reverse max-sm:mx-5">
         <div class="flex flex-col text-start justify-center gap-5 text-white">
           <h1 class="font-bold text-5xl leading-[1.2] max-sm:text-3xl">Zidane Store Layanan Akun Canva Premium</h1>
           <p class="text-xl max-sm:text-lg">Langsung cek layanan di website kami sekarang juga!</p>
@@ -65,7 +65,7 @@
     </section>
 
     <section class="py-20">
-      <div class="mx-15 max-sm:mx-5">
+      <div class="max-w-7xl mx-auto max-sm:mx-5">
         <h1 class="text-center py-10 font-bold text-4xl text-gray-700 max-sm:text-2xl">Manfaat Yang Bisa Kamu Dapatkan</h1>
         <div class="flex justify-center gap-10 max-sm:flex-wrap">
           <div class="flex flex-col justify-center items-end gap-5 W-70">
@@ -98,7 +98,7 @@
     </section>
 
     <section class="bg-gradient-to-b from-white to-blue-500" id="layanan">
-      <div class="mx-15 py-30 max-sm:mx-5">
+      <div class="max-w-7xl mx-auto py-30 max-sm:mx-5">
         <div class="text-center font-bold text-4xl text-gray-700 pb-10 max-sm:text-2xl">
           <h1>Pilih Paket Canva Sesuai Kebutuhanmu</h1>
         </div>
@@ -154,7 +154,7 @@
     </section>
 
     <section class="bg-white" id="berlangganan">
-      <div class="mx-15 pt-30 max-sm:mx-5">
+      <div class="max-w-7xl mx-auto pt-30 max-sm:mx-5">
         <div class="flex flex-col gap-2 text-center">
           <h1 class="font-bold text-4xl text-gray-800 max-sm:text-3xl">Cara Berlangganan</h1>
           <p class="text-gray-800">Cara praktis berlangganan layanan premium</p>
@@ -210,7 +210,7 @@
     </section>
 
     <section id="kendala">
-      <div class="mx-15 py-20 max-sm:mx-5">
+      <div class="max-w-7xl mx-auto py-20 max-sm:mx-5">
         <div class="text-center text-gray-800 font-bold text-4xl py-5 max-sm:text-2xl">
           <h1>Laporan Kendala</h1>
         </div>
@@ -239,7 +239,7 @@
     </section>
 
     <footer class="bg-blue-500">
-      <div class="mx-15 py-10 flex justify-between text-white max-lg:mx-5 max-md:flex-col max-lg:gap-8">
+      <div class="max-w-7xl mx-auto py-10 flex justify-between text-white max-lg:mx-5 max-md:flex-col max-lg:gap-8">
         <div class="">
           <img src="img/LOGO REMOVE WHITE.png" alt="" class="w-60" />
         </div>
