--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/e4ca1991ae.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="bg-white shadow-xl text-['Poppins'] sticky top-0 z-50">
       <div class="max-w-7xl mx-auto flex justify-between items-center text-black max-sm:mx-0 max-sm:me-5">
-        <div class="flex">
-          <div class="img flex justify-center items-center size-25">
-            <img src="img/LOGO REMOVE.png" alt="" />
+        <div class="flex gap-6">
+          <div class="img flex justify-center items-center size-15">
+            <img src="img/Logo baru ZD.png" alt="" />
           </div>
           <div class="flex justify-center items-center font-bold">
             <p class="text-2xl">Zidane Store</p>
@@ -68,7 +69,7 @@
       <div class="max-w-7xl mx-auto max-sm:mx-5">
         <h1 class="text-center py-10 font-bold text-4xl text-gray-700 max-sm:text-2xl">Manfaat Yang Bisa Kamu Dapatkan</h1>
         <div class="flex justify-center gap-10 max-sm:flex-wrap">
-          <div class="flex flex-col justify-center items-end gap-5 W-70">
+          <div class="flex flex-col justify-center items-end gap-5 W-70" data-aos="zoom-in-right" data-aos-duration="3000">
             <div class="border-r-2 border-gray-600 px-2">
               <p class="font-semibold text-xl text-gray-600">Hemat hingga 70%</p>
             </div>
@@ -79,10 +80,10 @@
               <p class="font-semibold text-xl text-gray-600">Customer Service Responsif</p>
             </div>
           </div>
-          <div class="flex justify-center items-center size-150 h-auto">
+          <div class="flex justify-center items-center size-150 h-auto" data-aos="zoom-in-down" data-aos-duration="3000">
             <img src="img/img-1.webp" alt="" />
           </div>
-          <div class="flex flex-col justify-center items-start gap-5 w-70">
+          <div class="flex flex-col justify-center items-start gap-5 w-70" data-aos="zoom-in-left" data-aos-duration="3000">
             <div class="border-l-2 border-gray-600 px-2">
               <p class="font-semibold text-xl text-gray-600">Layanan Legal dan Resmi</p>
             </div>
@@ -103,7 +104,11 @@
           <h1>Pilih Paket Canva Sesuai Kebutuhanmu</h1>
         </div>
         <div class="flex justify-center items-center gap-8 max-xl:flex-wrap max-xl:justify-center max-xl:items-center">
-          <div class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow">
+          <div
+            class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow"
+            data-aos="zoom-in"
+            data-aos-duration="2000"
+          >
             <img src="img/canva.png" alt="" class="w-full h-40 object-cover rounded-2xl" />
             <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
               <h1 class="text-3xl font-bold py-2">Pro 1 Tahun</h1>
@@ -119,7 +124,11 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow">
+          <div
+            class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow"
+            data-aos="zoom-in"
+            data-aos-duration="2000"
+          >
             <img src="img/canva.png" alt="" class="w-full h-40 object-cover rounded-2xl" />
             <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
               <h1 class="text-3xl font-bold py-2">Pro 6 Bulan</h1>
@@ -135,7 +144,11 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow">
+          <div
+            class="flex flex-col card w-100 border-2 rounded-2xl max-xl:max-w-100 border-white bg-white shadow"
+            data-aos="zoom-in"
+            data-aos-duration="2000"
+          >
             <img src="img/canva.png" alt="" class="w-full h-40 object-cover rounded-2xl" />
             <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
               <h1 class="text-3xl font-bold py-2">Pro 1 Bulan</h1>
@@ -241,7 +254,7 @@
     <footer class="bg-blue-500">
       <div class="max-w-7xl mx-auto py-10 flex justify-between text-white max-lg:mx-5 max-md:flex-col max-lg:gap-8">
         <div class="">
-          <img src="img/LOGO REMOVE WHITE.png" alt="" class="w-60" />
+          <img src="img/Logo Baru White.png" alt="" class="w-60" />
         </div>
         <div class="">
           <div class="font-bold text-xl">
@@ -288,5 +301,9 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
