--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="bg-white shadow-xl text-['Poppins'] sticky top-0 z-50">
-      <div class="max-w-7xl mx-auto flex justify-between items-center text-black max-sm:mx-0 max-sm:me-5">
+      <div class="max-w-7xl mx-auto flex justify-between items-center text-black max-sm:mx-5">
         <div class="flex gap-6">
           <div class="img flex justify-center items-center size-15">
             <img src="img/Logo baru ZD.png" alt="" />
