--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
               <p class="text-[0.9rem] min-h-20">
                 Langganan Canva Pro selama 12 bulan penuh. Praktis, hemat, dan langsung aktif dalam hitungan menit.
               </p>
-              <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
-                <a
-                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
-                  target="_blank"
-                  >Pesan</a
-                >
-              </div>
+              <a
+                href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+1+tahun+%EF%BF%BD&type=phone_number&app_absent=0"
+                target="_blank"
+                class="w-full"
+              >
+                <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white hover:bg-blue-600 w-full">Pesan</div>
+              </a>
             </div>
           </div>
           <div
@@ -135,13 +135,13 @@
               <p class="text-[0.9rem] min-h-20">
                 Dapatkan semua fitur Canva Pro selama 6 bulan. Solusi pas buat desain rutin dan proyek jangka menengah.
               </p>
-              <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
-                <a
-                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
-                  target="_blank"
-                  >Pesan</a
-                >
-              </div>
+              <a
+                href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+6+bulan+%EF%BF%BD&type=phone_number&app_absent=0"
+                target="_blank"
+                class="w-full"
+              >
+                <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white hover:bg-blue-600 w-full">Pesan</div>
+              </a>
             </div>
           </div>
           <div
@@ -153,13 +153,13 @@
             <div class="flex flex-col justify-center items-center gap-5 p-2 text-center">
               <h1 class="text-3xl font-bold py-2">Pro 1 Bulan</h1>
               <p class="text-[0.9rem] min-h-20">Coba semua fitur Canva Pro selama 30 hari. Ideal untuk kebutuhan desain cepat atau proyek singkat.</p>
-              <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white w-full hover:bg-blue-600">
-                <a
-                  href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+%EF%BF%BD&type=phone_number&app_absent=0"
-                  target="_blank"
-                  >Pesan</a
-                >
-              </div>
+              <a
+                href="https://api.whatsapp.com/send/?phone=6287872176733&text=Halo+kak%2C+saya+mau+order+Canva+Pro-nya+1+bulan+%EF%BF%BD&type=phone_number&app_absent=0"
+                target="_blank"
+                class="w-full"
+              >
+                <div class="text-xl font-bold bg-blue-500 text-center py-2 px-10 rounded-xl text-white hover:bg-blue-600 w-full">Pesan</div>
+              </a>
             </div>
           </div>
         </div>
